# safaribooks-rs

./: Cargo.toml  README.md
src/: cli.rs  config.rs  cookies.rs  display.rs  epub.rs  http_client.rs  main.rs  orly.rs
